--- a/app/src/main/res/layout/content_registrar_debito_resumo.xml
+++ b/app/src/main/res/layout/content_registrar_debito_resumo.xml
@@ -93,7 +93,7 @@
         <TextView android:id="@+id/textViewFinalizar"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:gravity="center|start"
+                  android:gravity="center|end"
                   android:textColor="@color/primaryTextColor"
                   android:textSize="18sp"
                   android:textStyle="bold"
