--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,11 @@
 
         <item
                 android:id="@+id/nav_main"
+                android:icon="@drawable/chart_donut"
+                android:title="@string/menu_dash"/>
+
+        <item
+                android:id="@+id/nav_clientes"
                 android:icon="@drawable/account_heart"
                 android:title="@string/menu_clientes"/>
 
