--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -17,18 +17,21 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-    <TextView
+    <ImageView
             android:id="@+id/textViewAppName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
             android:layout_marginBottom="50dp"
             android:gravity="center"
+            android:src="@drawable/logo_app_novo_inline"
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textColor="@color/primaryTextColor"
             android:textSize="25sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/cards"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
