--- a/app/src/main/res/layout/list_view_item_default.xml
+++ b/app/src/main/res/layout/list_view_item_default.xml
@@ -3,16 +3,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         app:cardCornerRadius="1dp"
         app:cardElevation="2dp"
+        android:layout_margin="4dp"
+        app:contentPadding="6dp"
         app:cardUseCompatPadding="true">
 
     <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="10dp"
             android:text="Item Value"
             android:textAlignment="textStart"
             android:textAllCaps="true"
