--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
+        android:layout_height="150dp"
         android:background="@color/primaryColor"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,8 +12,8 @@
         android:gravity="bottom">
 
     <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:background="@drawable/playstore_icon"
             android:scaleType="centerInside"
             android:contentDescription="@string/nav_header_desc"
@@ -26,6 +24,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/primaryTextColor"
             android:text="@string/nav_header_title"
+            android:textAllCaps="true"
+            android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
@@ -34,6 +34,7 @@
             android:textColor="@color/primaryTextColor"
             android:text="@string/nav_header_subtitle"
             android:id="@+id/textView"
-            android:textSize="12sp"/>
+            android:textSize="12sp"
+            android:visibility="gone"/>
 
 </LinearLayout>
