--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,8 +23,10 @@
     </style>
 
     <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:textColor">@color/secondaryColor</item>  // you can change the color of the yearPiker dialog
-        <item name="android:textColorPrimary">@color/secondaryTextColor</item> // you can change the color of the yearPiker dialog
+        <item name="android:textColor">@color/secondaryColor</item>
+        // you can change the color of the yearPiker dialog
+        <item name="android:textColorPrimary">@color/secondaryTextColor</item>
+        // you can change the color of the yearPiker dialog
     </style>
 
 </resources>
